2007-12-26  Sam Steingold  <sds@gnu.org>

	* symbol.d (GENSYM): use check_pos_integer & error_string_integer

2007-12-26  Reini Urban  <rurban@x-ray.at>

	<33_trans2>
	* misc.d, sort.d, symbol.d, time.d, weak.d, win32.d:
	translate comments and convert them from "# " to "/**/"

2007-12-20  Sam Steingold  <sds@gnu.org>

	* type.lisp (SIGNED-BYTE, UNSIGNED-BYTE): unify error messages

2007-12-20  Sam Steingold  <sds@gnu.org>

	fix bug [ 1779490 ]: linux:dirent definition error
	* modules/bindings/glibc/linux.lisp (clisp_dirent_ino_t)
	(clisp_dirent_off_t): define depending on __USE_FILE_OFFSET64

2007-12-20  Sam Steingold  <sds@gnu.org>

	fix bug [ 1854698 ]: BYTE is a type, but is unacceptable input to TYPEP
	* type.lisp (BYTE): add atomic type
	* predtype.d (bytep): implement
	* subr.d, constsym.d (bytep): add

2007-12-19  Sam Steingold  <sds@gnu.org>

	* io.d (pr_stream) [0]: print contents of a STRING-INPUT-STREAM
	for bootstrap debugging only

2007-12-18  Sam Steingold  <sds@gnu.org>

	DESCRIBE shows contents of STRING-STREAMs
	* stream.d (error_string_stream): add
	(STRING-INPUT-STREAM-INDEX, GET-OUTPUT-STREAM-STRING): use it
	(STRING-STREAM-STRING): add
	* constsym.d, subr.d (string_stream_string): add
	* describe.lisp (*squeeze-string-max*, *squeeze-string-section*)
	(squeeze-string): add
	(describe-object): use squeeze-string and string-stream-string to
	describe string streams

2007-12-18  Sam Steingold  <sds@gnu.org>

	* record.d (error_closure): add
	(SYS::CLOSURE-NAME, (SETF SYS::CLOSURE-NAME)): use it
	(slot_in_arglist, SYS::%MAKE-INSTANCE): add a cast to avoid
	the "value computed is not used" warning

2007-12-17  Sam Steingold  <sds@gnu.org>

	* lispbibl.d, pathname.d, spvw_memfile.d, time.d (decoded_time_t):
	translate field name from German to English

2007-12-16  Sam Steingold  <sds@gnu.org>

	* spvw.d, spvw_memfile.d (quit_instantly): renamed from quit_sofort
	* io.d (spaces): rename argument anzahl to scount
	(paren_open): rename from klammer_auf